--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 DATABASE_URL="postgres://postgres:password@localhost:5432/your_db_name?schema=public"
+DB_NAME="your_db_name"
+DB_USER="your_db_user"
+DB_PASSWORD="your_db_password"
